--- a/index.html
+++ b/index.html
@@ -9,18 +9,42 @@
 
 <body>
 
-<h1>Summer 2019</h1>
+<h1>Movie Mania</h1>
 
   <article class="movie">
         <div class="movie-content">
-          <p class="movie-sum">
+          <p class="summary">
             Dwayne Johson is Awesome
           </p>
           <p class="movie-name">
             <a href="#">Hobbs and Shaw</a>
           </p>
+          <p class="release-date">
+            <a href="#">August 2</a>
+          </p>
+          <p class="Starring">
+            <a href="#">Jason Statum</a>
+          </p>
         </div>
   </article>
+
+  <article class="movie">
+        <div class="movie-content">
+          <p class="summary">
+            Scar looks terrible
+          </p>
+          <p class="movie-name">
+            <a href="#">The Lion King</a>
+          </p>
+          <p class="release-date">
+            <a href="#">July 19</a>
+          </p>
+          <p class="Starring">
+            <a href="#">John Oliver</a>
+          </p>
+        </div>
+  </article>
+
 
 <p>
 
