--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <head>
 <meta charset="utf-8">
 <title>Movie Mania</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
+<link rel="stylesheet" href="style.css" media="screen">
+
 </head>
 
 <body>
