--- a/mainIndex.html
+++ b/mainIndex.html
@@ -61,17 +61,22 @@
               <div class="modal-dialog">
 
                 <div class="modal-header">
-                  <h3>Create a Twit</h3>
+                  <h3>Have something to add?</h3>
                   <button type="button" class="modal-close-button">&times;</button>
                 </div>
 
                 <div class="modal-body">
                   <div class="post-input-element">
-                    <label for="post-text-input">Twit text</label>
+                    <label for="post-text-input">Write your own post:</label>
                     <textarea id="post-text-input"></textarea>
                   </div>
+                  <div class="modal-body">
+                    <div class="post-input-element">
+                      <label for="post-url-input">Link an article:</label>
+                      <textarea id="post-text-input"></textarea>
+                    </div>
                   <div class="post-input-element">
-                    <label for="post-attribution-input">Author</label>
+                    <label for="post-attribution-input">Sign your post:</label>
                     <input type="text" id="post-attribution-input">
                   </div>
                 </div>
