--- a/404.html
+++ b/404.html
@@ -23,6 +23,7 @@
         <main class="error-page">
           <h2>404</h2>
           <h3>Ummm... You're looking for something that doesn't actually exist</h3>
+          <img src="https://i.ytimg.com/vi/9T0YaxNks4c/maxresdefault.jpg" alt="Blowing up things">
         </main>
     </body>
   </html>
