pop pop popcorn

--- a/mainIndex.html
+++ b/mainIndex.html
@@ -19,8 +19,9 @@
             <li class="navitem"><a href="/">Home</a></li>
             <li class="navitem"><a href="/Best">Best</a></li>
             <li class="navitem"><a href="/Recommended">Recommended</a></li>
+            <li class="navitem navbar-search">
             <input type="text" id="navbar-search-input" placeholder="Search...">
-            <button type="button" id="navbar-search-button"><i class="fas fa-search"></i></button>
+            <button type="button" id="navbar-search-button"><i class="fas fa-eye"></i></button>
           </ul>
         </nav>
 
@@ -28,27 +29,14 @@
           <article class="genre-container">
                 <div class="genre-content">
                   <h3>Genres</h3>
-                  <p class="genre-name">
-                    <a href="#">Action & Adventure</a>
-                  </p>
-                  <p class="genre-name">
-                    <a href="#">Animated & Remakes</a>
-                  </p>
-                  <p class="genre-name">
-                    <a href="#">Comedy</a>
-                  </p>
-                  <p class="genre-name">
-                    <a href="#">Horror</a>
-                  </p>
-                  <p class="genre-name">
-                    <a href="#">Romance & RomCom</a>
-                  </p>
-                  <p class="genre-name">
-                    <a href="#">Superhero</a>
-                  </p>
-                  <p class="genre-name">
-                    <a href="#">Western</a>
-                  </p>
+                  <ul>
+                    <li><a href="#">Action & Adventure</a></li>
+                    <li><a href="#">Animated & Remakes</a></li>
+                    <li><a href="#">Comedy</a></li>
+                    <li><a href="#">Horror</a></li>
+                    <li><a href="#">Romance & RomCom</a></li>
+                    <li><a href="#">Superhero</a></li>
+                    <li><a href="#">Western</a></li>
                 </div>
           </article>
             <div class="icon">
