--- a/mainIndex.html
+++ b/mainIndex.html
@@ -30,13 +30,13 @@
                 <div class="genre-content">
                   <h3>Genres</h3>
                   <ul>
-                    <li><a href="#">Action & Adventure</a></li>
-                    <li><a href="#">Animated & Remakes</a></li>
-                    <li><a href="#">Comedy</a></li>
-                    <li><a href="#">Horror</a></li>
-                    <li><a href="#">Romance & RomCom</a></li>
-                    <li><a href="#">Superhero</a></li>
-                    <li><a href="#">Western</a></li>
+                    <li><a href="A-A.html">Action & Adventure</a></li>
+                    <li><a href="A-R.html">Animated & Remakes</a></li>
+                    <li><a href="Comedy.html">Comedy</a></li>
+                    <li><a href="Horror.html">Horror</a></li>
+                    <li><a href="R-RC.html">Romance & RomCom</a></li>
+                    <li><a href="SuperHero.html">Superhero</a></li>
+                    <li><a href="Western.html">Western</a></li>
                 </div>
           </article>
             <div class="icon">
