--- a/SuperHero.html
+++ b/SuperHero.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="uft-8">
       <title>Movie Mania</title>
-      <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/film" media="screen">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
     </head>
 
@@ -17,6 +17,9 @@
             <li class="navitem"><a href="/">Home</a></li>
             <li class="navitem"><a href="/Best">Best</a></li>
             <li class="navitem"><a href="/Recommended">Recommended</a></li>
+            <li class="navitem navbar-search">
+            <input type="text" id="navbar-search-input" placeholder="Search...">
+            <button type="button" id="navbar-search-button"><i class="fas fa-eye"></i></button>
           </ul>
         </nav>
 
@@ -27,5 +30,36 @@
                 </div>
             </article>
           </main>
+
+          <button type="button" id="add-post-button"><i class="fas fa-film"></i></button>
+          <div id="modal-backdrop" class="hidden"></div>
+              <div id="create-post-modal" class="hidden">
+                <div class="modal-dialog">
+
+                  <div class="modal-header">
+                    <h3>Have something to add?</h3>
+                    <button type="button" class="modal-close-button">&times;</button>
+                  </div>
+
+                  <div class="modal-body">
+                    <div class="post-input-element">
+                      <label for="post-text-input">Write your own post:</label>
+                      <textarea id="post-text-input"></textarea>
+                    </div>
+                    <div class="modal-body">
+                      <div class="post-input-element">
+                        <label for="post-url-input">Link an article:</label>
+                        <textarea id="post-text-input"></textarea>
+                      </div>
+                    <div class="post-input-element">
+                      <label for="post-attribution-input">Sign your post:</label>
+                      <input type="text" id="post-attribution-input">
+                    </div>
+                  </div>
+
+                  <div class="modal-footer">
+                    <button type="button" class="modal-cancel-button">Cancel</button>
+                    <button type="button" class="modal-accept-button">Contribute</button>
+                  </div>
     </body>
 </html>
