--- a/A-A.html
+++ b/A-A.html
@@ -37,7 +37,7 @@
           </div>
           <div class="twit-content">
             <p class="twit-text">Hobbs and Shaw is coming out soon. Are you ready? Directed by David Leitch, this action packed movie
-            is in the universe of The Fast and the Furious without the horrid acting of Vin Diesel. We have Dwayne "The Rock" "Egg Head" Johnson and
+            is in the universe of The Fast and the Furious without the horrid acting of Vin Diesel. We have Dwayne "The Rock" "E<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRb41YKCVVcDR2CD5mxuKLBxGg6d_whTFiXf0bIkutAbzFbeS-tA">g</a>g Head" Johnson and
             Jason "Egg Head with a 9 o'clock shadow" Statham. Together the gorgeous body of Johnson and the to die for accent of Statham, this
             car chase, punch savey, legend of a movie will be sure to pull in a crowd. When does it come out you ask? Well Hobbs and Shaw will be
             released on August 2, 2019. Only a few more months to wait!</p>
