--- a/mainIndex.html
+++ b/mainIndex.html
@@ -7,6 +7,7 @@
       <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
+      <script src="index.js" charset="utf-8" defer></script>
     </head>
 
     <body>
