--- a/R-RC.html
+++ b/R-RC.html
@@ -44,6 +44,7 @@
               she decides to hire Fred as her speechwriter and something unexpected insues.</p>
               <p class="twit-url"><a href="https://www.imdb.com/title/tt2139881/">Long Shot's IMDB</a></p>
               <p class="twit-author"><a href="#">NQ</a></p>
+              <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span></div>
             </div>
           </article>
 
