create post modal now working!

--- a/mainIndex.html
+++ b/mainIndex.html
@@ -83,11 +83,11 @@
                   <div class="modal-body">
                     <div class="post-input-element">
                       <label for="post-url-input">Link an article:</label>
-                      <textarea id="post-text-input"></textarea>
+                      <textarea id="post-url-input"></textarea>
                     </div>
                   <div class="post-input-element">
                     <label for="post-attribution-input">Sign your post:</label>
-                    <input type="text" id="post-attribution-input">
+                    <input type="text" id="post-attribution-input"></input>
                   </div>
                 </div>
 
