trying to get the home button to work

--- a/mainIndex.html
+++ b/mainIndex.html
@@ -17,7 +17,7 @@
 
         <nav class="navbar">
           <ul class="navbar">
-            <li class="navitem"><a href="/">Home</a></li>
+            <li class="navitem"><a href="mainIndex.html">Home</a></li>
             <li class="navitem"><a href="/Best">Best</a></li>
             <li class="navitem"><a href="/Recommended">Recommended</a></li>
             <li class="navitem navbar-search">
