--- a/SuperHero.html
+++ b/SuperHero.html
@@ -5,6 +5,7 @@
       <title>Movie Mania</title>
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
+      <script src="index.js" charset="utf-8" defer></script>
     </head>
 
     <body>
