--- a/Comedy.html
+++ b/Comedy.html
@@ -3,8 +3,11 @@
   <head>
       <meta charset="uft-8">
       <title>Movie Mania</title>
+      <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/film" media="screen">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
+      <script src="index.js" charset="utf-8" defer></script>
     </head>
 
     <body>
@@ -43,7 +46,7 @@
               movie revolves around. Have you seen it? Let us know what you thought. </p>
               <p class="twit-url"><a href="https://www.imdb.com/title/tt1489887/">Booksmart's IMDB</a></p>
               <p class="twit-author"><a href="#">NQ</a></p>
-              <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span></div>
+              <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
             </div>
           </article>
 
