--- a/Comedy.html
+++ b/Comedy.html
@@ -46,7 +46,13 @@
               movie revolves around. Have you seen it? Let us know what you thought. </p>
               <p class="twit-url"><a href="https://www.imdb.com/title/tt1489887/">Booksmart's IMDB</a></p>
               <p class="twit-author"><a href="#">NQ</a></p>
-              <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
+              <div class="stars" data-rating=" ">
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+              </div>
             </div>
           </article>
 
