--- a/R-RC.html
+++ b/R-RC.html
@@ -47,7 +47,13 @@
               she decides to hire Fred as her speechwriter and something unexpected insues.</p>
               <p class="twit-url"><a href="https://www.imdb.com/title/tt2139881/">Long Shot's IMDB</a></p>
               <p class="twit-author"><a href="#">NQ</a></p>
-              <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
+              <div class="stars" data-rating=" ">
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+                <span class="star">&nbsp;</span>
+              </div>
             </div>
           </article>
 
