--- a/mainIndex.html
+++ b/mainIndex.html
@@ -82,6 +82,7 @@
 
           <div class="dice">
             <p id="placeholder"></p>
+            <p id="genre-output-placeholder"></p>
             <button id="button">Roll Dice</button>
             <script src="dice.js"></script>
             <script src="ui.js"></script>
@@ -100,6 +101,8 @@
                     <li><a href="R-RC.html">Romance & RomCom</a></li>
                     <li><a href="SuperHero.html">Superhero</a></li>
                     <li><a href="Western.html">Western</a></li>
+                  </ul>
+                  <img src="https://images.vexels.com/media/users/3/151999/isolated/lists/ef9bf8f8b4adb58f9597823a298283c4-sweet-popcorn-icon.png" alt="popcorn man">
                 </div>
 
         <button type="button" id="add-post-button"><i class="fas fa-film"></i></button>
