debating whether to get coffeecake

--- a/mainIndex.html
+++ b/mainIndex.html
@@ -81,6 +81,7 @@
           </article>
 
           <div class="dice">
+            <h3>Roll for a Genre!</h3>
             <p id="placeholder"></p>
             <p id="genre-output-placeholder"></p>
             <button id="button">Roll Dice</button>
