--- a/mainIndex.html
+++ b/mainIndex.html
@@ -17,9 +17,9 @@
 
         <nav class="navbar">
           <ul class="navbar">
-            <li class="navitem"><a href="/">Home</a></li>
-            <li class="navitem"><a href="/Best">Best</a></li>
-            <li class="navitem"><a href="/Recommended">Recommended</a></li>
+            <li class="navitem"><a href="https://www.youtube.com/watch?v=rNUsOaB5V2c">Home</a></li>
+            <li class="navitem"><a href="https://www.youtube.com/watch?v=vsQrKZcYtqg">Best</a></li>
+            <li class="navitem"><a href="https://www.youtube.com/watch?v=assdP1YG-qo&t=4s">Recommended</a></li>
             <li class="navitem navbar-search">
             <input type="text" id="navbar-search-input" placeholder="Search...">
             <button type="button" id="navbar-search-button"><i class="fas fa-eye"></i></button>
