--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!---Relavent code to get the page to run--->
       <meta charset="uft-8">
       <title>Movie Mania</title>
       <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/film" media="screen">
@@ -9,9 +10,11 @@
 
     <body>
         <header>
+            <!---Site title. On every page for uniformity--->
             <h1 class="site-title">Movie Mania</h1>
         </header>
 
+        <!---Navbar on every page for uniformity--->
         <nav class="navbar">
           <ul class="navbar">
             <li class="navitem"><a href="/">Home</a></li>
@@ -20,6 +23,7 @@
           </ul>
         </nav>
 
+        <!---Things to go in 404 handlebar--->
         <main class="error-page">
           <h2>404</h2>
           <h3>Ummm... You're looking for something that doesn't actually exist</h3>
