we had it, we lost it

--- a/public/mainIndex.html
+++ b/public/mainIndex.html
@@ -89,7 +89,7 @@
             <h3>Roll for a Genre!</h3>
             <p id="placeholder"></p>
             <p id="genre-output-placeholder"></p>
-            <button id="button">Roll Dice</button>
+            <button id="dice-button">Roll Dice</button>
             <script src="dice.js"></script>
             <script src="ui.js"></script>
           </div>
@@ -111,7 +111,7 @@
                   <img src="https://images.vexels.com/media/users/3/151999/isolated/lists/ef9bf8f8b4adb58f9597823a298283c4-sweet-popcorn-icon.png" alt="popcorn man">
                 </div>
 
-        <button type="button" id="add-post-button"><i class="fas fa-film"></i></button>
+        <button type="button" id="add-post-button" class="hidden"><i class="fas fa-film"></i></button>
         <div id="modal-backdrop" class="hidden"></div>
             <div id="create-post-modal" class="hidden">
               <div class="modal-dialog">
